--- a/ErabliereIU/src/capteurs/images/capteur-image-list.component.html
+++ b/ErabliereIU/src/capteurs/images/capteur-image-list.component.html
@@ -18,13 +18,9 @@
                 <tr [formGroup]="getCapteur(capteur.id)">
                     <td class="min">
                         <!-- create a copy id button, and for the icon of the button use a copy icon -->
-                        <button
-                            type="button"
-                            class="btn btn-outline-primary btn-sm"
-                            (click)="copyId($event, capteur.id)"
-                            title="Copier l'id du capteur">
-                            &#x2398;
-                        </button>
+                        <copy-id-button 
+                            [text]="capteur.id"
+                            title="Copier l'id du capteur {{capteur.id}}" />
                     </td>
                     <td [class.was-validated]="getNom(capteur.id)!.touched">
                         @if(isDisplayEditForm(capteur.id)) {
