--- a/ErabliereIU/src/alerte/modifier-alerte.component.html
+++ b/ErabliereIU/src/alerte/modifier-alerte.component.html
@@ -1,7 +1,7 @@
 @if (editAlerte) {
 <div>
   <span class="text-danger">{{generalError}}</span>
-  <p>Id: {{ alerte?.id }}</p>
+  <p>Id: {{ alerte?.id }} <copy-id-button [text]="alerte?.id" title="Copier l'id de l'alerte"></copy-id-button></p>
   <form [formGroup]="alerteForm">
     <div class="form-group">
       <einput [formGroup]="alerteForm" name="nom" />
@@ -14,22 +14,22 @@
         <einput [formGroup]="alerteForm" name="destinataireSMS" />
       </div>
       <div class="form-group col-md-6">
-        <einput [formGroup]="alerteForm" name="temperatureMin" symbole="°C" />
+        <einput [formGroup]="alerteForm" type="number" name="temperatureMin" symbole="°C" />
       </div>
       <div class="form-group col-md-6">
-        <einput [formGroup]="alerteForm" name="temperatureMax" symbole="°C" />
+        <einput [formGroup]="alerteForm" type="number" name="temperatureMax" symbole="°C" />
       </div>
       <div class="form-group col-md-6">
-        <einput [formGroup]="alerteForm" name="vacciumMin" symbole="HG" />
+        <einput [formGroup]="alerteForm" type="number" name="vacciumMin" symbole="HG" />
       </div>
       <div class="form-group col-md-6">
-        <einput [formGroup]="alerteForm" name="vacciumMax" symbole="HG" />
+        <einput [formGroup]="alerteForm" type="number" name="vacciumMax" symbole="HG" />
       </div>
       <div class="form-group col-md-6">
-        <einput [formGroup]="alerteForm" name="niveauBassinMin" symbole="%" />
+        <einput [formGroup]="alerteForm" type="number" name="niveauBassinMin" symbole="%" />
       </div>
       <div class="form-group col-md-6">
-        <einput [formGroup]="alerteForm" name="niveauBassinMax" symbole="%" />
+        <einput [formGroup]="alerteForm" type="number" name="niveauBassinMax" symbole="%" />
       </div>
     </div>
     <div class="mt-3 mb-3">
@@ -45,7 +45,7 @@
 @if (editAlerteCapteur) {
 <div>
   <span class="text-danger">{{generalError}}</span>
-  <p>Id: {{ alerteCapteur?.id }}</p>
+  <p>Id: {{ alerteCapteur?.id }} <copy-id-button [text]="alerteCapteur?.id" title="Copier l'id de l'alerte"></copy-id-button></p>
   <form [formGroup]="alerteCapteurForm">
     <div class="form-group">
       <einput [formGroup]="alerteCapteurForm" name="nom" placeholder="Nom de l'alerte" />
@@ -61,10 +61,10 @@
     </div>
     <div class="row">
       <div class="form-group col-md-6">
-        <einput [formGroup]="alerteCapteurForm" name="min" [symbole]="alerteCapteur?.capteur?.symbole" />
+        <einput [formGroup]="alerteCapteurForm" type="number" name="min" [symbole]="alerteCapteur?.capteur?.symbole" />
       </div>
       <div class="form-group col-md-6">
-        <einput [formGroup]="alerteCapteurForm" name="max" [symbole]="alerteCapteur?.capteur?.symbole" />
+        <einput [formGroup]="alerteCapteurForm" type="number" name="max" [symbole]="alerteCapteur?.capteur?.symbole" />
       </div>
     </div>
     <button class="btn btn-primary mt-3 mb-3 me-2" (click)="onButtonModifierAlerteCapteurClick()">Modifier</button>
