--- a/ErabliereIU/src/admin/admin-customers/customer-list/customer-list.component.html
+++ b/ErabliereIU/src/admin/admin-customers/customer-list/customer-list.component.html
@@ -1,3 +1,10 @@
+<div class="row">
+    <div class="col-md-12">
+        <label for="searchInput">Rechercher un client:</label>
+        <input type="text" id="searchInput" class="form-control" placeholder="Rechercher par id, nom ou email" (keyup)="filterCustomers($event)">
+    </div>
+</div>
+
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
@@ -12,7 +19,7 @@
             </tr>
         </thead>
         <tbody>
-            @for (customer of customers; track customer.id) {
+            @for (customer of customersFiltred; track customer.id) {
             <tr>
                 <td class="min">
                     <button class="btn btn-secondary" (click)="toggleAccess(customer.id)" title="Afficher les accès">
