--- a/ErabliereIU/src/notes/note.component.html
+++ b/ErabliereIU/src/notes/note.component.html
@@ -49,7 +49,8 @@
     <div class="btn-group me-2">
       <button class="btn btn-primary btn-sm" (click)="modifierImage()">Modifier l'image</button>
     </div>
-    @if (userIsInRole('ErabliereAIUser')) {
+    @if (isAIUser) 
+    {
     <div class="btn-group me-2">
       <button class="btn btn-secondary btn-sm" (click)="genererUneImageParIA()">
         Générer une image
@@ -66,6 +67,12 @@
     @if (actionError) {
     <div class="row">
       <span class="text-danger">{{ actionError }}</span>
+    </div>
+    }
+
+    @if (progressionText) {
+    <div class="row">
+      <span class="text-muted">{{ progressionText }}</span>
     </div>
     }
 
