disable note cache when id is the same as the trigger

--- a/ErabliereIU/src/notes/notes.component.html
+++ b/ErabliereIU/src/notes/notes.component.html
@@ -40,7 +40,7 @@
             <note
               [note]="note"
               [noteToModifySubject]="noteToModify"
-              (needToUpdate)="loadNotes()"
+              (needToUpdate)="loadNotes(note.id)"
               />
             </div>
           }
